--- a/tempo.config.json
+++ b/tempo.config.json
@@ -8,33 +8,34 @@
         "text-4xl",
         "font-extrabold",
         "tracking-tight",
-        "lg:text-5xl"
+        "lg:text-5xl",
+        "text-primary-700"
       ],
-      "previewClasses": ["text-3xl", "font-extrabold", "tracking-tight"]
+      "previewClasses": ["text-3xl", "font-extrabold", "tracking-tight", "text-primary-700"]
     },
     {
       "name": "Header 2",
       "preview": "Aa",
       "tag": "h2",
-      "classes": ["text-3xl", "font-semibold", "tracking-tight"]
+      "classes": ["text-3xl", "font-semibold", "tracking-tight", "text-primary-600"]
     },
     {
       "name": "Header 3",
       "preview": "Aa",
       "tag": "h3",
-      "classes": ["text-2xl", "font-semibold", "tracking-tight"]
+      "classes": ["text-2xl", "font-semibold", "tracking-tight", "text-primary-600"]
     },
     {
       "name": "Header 4",
       "preview": "Aa",
       "tag": "h4",
-      "classes": ["text-xl", "font-semibold", "tracking-tight"]
+      "classes": ["text-xl", "font-semibold", "tracking-tight", "text-primary-500"]
     },
     {
       "name": "Paragraph",
       "preview": "¶",
       "tag": "p",
-      "classes": ["leading-7"]
+      "classes": ["leading-7", "text-foreground"]
     },
     {
       "name": "Lead Text",
@@ -46,8 +47,8 @@
       "name": "Blockquote",
       "preview": "abc",
       "tag": "blockquote",
-      "classes": ["border-l-2", "pl-6", "italic"],
-      "previewClasses": ["border-l-2", "pl-2", "italic"]
+      "classes": ["border-l-2", "border-secondary-400", "pl-6", "italic", "text-muted-foreground"],
+      "previewClasses": ["border-l-2", "border-secondary-400", "pl-2", "italic", "text-muted-foreground"]
     },
     {
       "name": "Inline Code",
@@ -56,7 +57,8 @@
       "classes": [
         "relative",
         "rounded",
-        "bg-muted",
+        "bg-mint-light",
+        "text-primary-700",
         "px-[0.3rem]",
         "py-[0.2rem]",
         "font-mono",
@@ -68,13 +70,13 @@
       "name": "Large",
       "preview": "A",
       "tag": "div",
-      "classes": ["text-lg", "font-semibold"]
+      "classes": ["text-lg", "font-semibold", "text-primary-600"]
     },
     {
       "name": "Small",
       "preview": "Aa",
       "tag": "small",
-      "classes": ["text-sm", "font-medium", "leading-none"]
+      "classes": ["text-sm", "font-medium", "leading-none", "text-muted-foreground"]
     },
     {
       "name": "Muted",
@@ -86,7 +88,7 @@
       "name": "Extra Small",
       "preview": "Aa",
       "tag": "p",
-      "classes": ["text-xs", "font-light"]
+      "classes": ["text-xs", "font-light", "text-muted-foreground"]
     }
   ]
 }
